# SEAGym

./: .env.example  .gitattributes  .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
docs/: README.md  api_reference.md  concepts.md  configuration.md  data.md  decisions.md  evaluation.md  extending.md  getting_started.md  harbor.md  metrics.md  training.md
examples/deterministic/: README.md  config.json
reference/: README.md
runs/: README.md
runs/paper_reproduction/: README.md
scripts/: seagym.py
seagym/: __init__.py  cli.py  costs.py  paths.py  utils.py
seagym/baselines/: __init__.py  adapter_utils.py  base.py  data.py  factory.py  model_mapping.py  native_runtime.py  prompt_refine.py  static.py
seagym/config/: __init__.py  experiment.py  fields.py
seagym/data/: __init__.py  datamodule.py  datasets.py  harbor_scan.py  samplers.py  scoring.py  splits.py  stratified.py  types.py
seagym/envs/: __init__.py  base.py  deterministic.py  results.py
seagym/logging/: __init__.py  artifacts.py  redaction.py  reports.py
seagym/metrics/: __init__.py  functional.py  registry.py
seagym/models/: __init__.py  clients.py  config.py  registry.py
seagym/rollout_agents/: __init__.py  ahe_nexau.py  base.py  factory.py  harbor.py  (+1 more)
tests/: custom_metric_fixture.py  test_baseline_spec.py  test_costs.py  test_dataloader.py  test_engine.py  test_harbor_dataset.py  test_harbor_results.py  test_metrics.py  test_paths.py  test_runtime.py  test_runtime_check.py  test_scheduling.py  test_split_validation.py  test_trainer_reports.py
(+70 files in other folders)
